--- a/local.properties
+++ b/local.properties
@@ -7,6 +7,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Fri Mar 02 16:04:13 CST 2018
-ndk.dir=D\:\\Android\\android-sdk\\ndk-bundle
-sdk.dir=D\:\\Android\\android-sdk
+#Wed Mar 07 16:07:02 JST 2018
+sdk.dir=C\:\\Users\\sato\\AppData\\Local\\Android\\Sdk
