--- a/app/build.gradle
+++ b/app/build.gradle
@@ -30,13 +30,13 @@ dependencies {
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.1'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.1'
-    compile files('libs/libNeuroSkyECG.jar')
-    compile files('libs/libStreamSDK_v1.1.0.jar')
-    compile 'com.wonderkiln:camerakit:0.13.1'
+    implementation files('libs/libNeuroSkyECG.jar')
+    implementation files('libs/libStreamSDK_v1.1.0.jar')
+    implementation 'com.wonderkiln:camerakit:0.13.1'
     // https://mvnrepository.com/artifact/com.fasterxml.jackson.core/jackson-core
-    compile 'com.fasterxml.jackson.core:jackson-core:2.9.4'
+    implementation 'com.fasterxml.jackson.core:jackson-core:2.9.4'
     // https://mvnrepository.com/artifact/com.fasterxml.jackson.core/jackson-databind
-    compile 'com.fasterxml.jackson.core:jackson-databind:2.9.4'
+    implementation 'com.fasterxml.jackson.core:jackson-databind:2.9.4'
     // https://mvnrepository.com/artifact/com.fasterxml.jackson.core/jackson-annotations
-    compile 'com.fasterxml.jackson.core:jackson-annotations:2.9.4'
+    implementation 'com.fasterxml.jackson.core:jackson-annotations:2.9.4'
 }
