乗務点呼結果取得http処理を追加

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -36,6 +36,7 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
+        android:screenOrientation="portrait"
         android:theme="@style/AppTheme">
         <activity
             android:name="co.yaw.tpw.smartinspection.LoginActivity"
@@ -59,7 +60,9 @@
         <activity android:name="co.yaw.tpw.smartinspection.VitalMeasureActivity" />
         <activity android:name="co.yaw.tpw.smartinspection.VitalSignMeasureActivity" />
         <activity android:name="co.yaw.tpw.smartinspection.HealthStatusRegActivity" />
-        <activity android:name="co.yaw.tpw.smartinspection.CallMenuActivity" />
+        <activity
+            android:name="co.yaw.tpw.smartinspection.CallMenuActivity"
+            android:launchMode="singleTask"/>
 
     </application>
 
