アルコール測定結果保存http処理を追加

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -58,9 +58,7 @@
         <activity android:name="co.yaw.tpw.smartinspection.VitalMeasureActivity" />
         <activity android:name="co.yaw.tpw.smartinspection.VitalSignMeasureActivity" />
         <activity android:name="co.yaw.tpw.smartinspection.HealthStatusRegActivity" />
-        <activity
-            android:name="co.yaw.tpw.smartinspection.CallMenuActivity"
-            android:launchMode="singleTask"/>
+        <activity android:name="co.yaw.tpw.smartinspection.CallMenuActivity" />
 
     </application>
 
